Downgrade to Java 8 for MochaHost JDK 1.8 compatibility
Ref #19

MochaHost Private JVM only has JDK 1.8.0_77. Adapted all code:
- java.version: 17 -> 1.8
- jjwt: 0.12.6 -> 0.11.5 (Java 8 compatible API)
- JwtTokenProvider: 0.12 API (.subject/.verifyWith/.parseSignedClaims)
  -> 0.11 API (.setSubject/.setSigningKey/.parseClaimsJws)
- List.of() -> Arrays.asList() / Collections.singletonList()
- Map.of() -> HashMap
- var -> explicit types
- Switch expression -> traditional switch statement

All 34 backend tests pass. WAR builds at 97MB.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>